name:          reflex-host
version:       0.3
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.10
author:        Benno Fünfstück
maintainer:    Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability:     experimental
homepage:      http://github.com/bennofs/reflex-host/
bug-reports:   http://github.com/bennofs/reflex-host/issues
copyright:     Copyright (C) 2014 Benno Fünfstück
synopsis:      Implementation support for reflex frameworks
description:   
  The reflex FRP library's functions for implementing a framework are quite lowlevel. 
  This library provides higher-level support for on top of the basic functions from reflex.
  It provides a monad with support for external event sources and performing IO actions in response to events.
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.md

source-repository head
  type: git
  location: https://github.com/bennofs/reflex-host.git

  
benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Performance.hs
  build-depends:    
      base  >= 4.4 && < 5
    , criterion
    , reflex-host >= 0.2
    , reflex
    , containers
    , mtl
    , lens
                    
  ghc-options:      -O2  
  
  
library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2 
  build-depends:
      base >= 4.4 && < 5
    , reducers
    , mtl
    , reflex >= 0.3
    , dlist
    , dependent-sum
    , transformers 
    , lens
    , semigroups
    , containers
  default-extensions:
    FlexibleInstances
    TupleSections
    FlexibleContexts
    StandaloneDeriving
    FunctionalDependencies
    RecordWildCards
    TypeFamilies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    RankNTypes
    GADTs

    
  exposed-modules:
    Reflex.Host.App
    Reflex.Host.App.Class
    Reflex.Host.App.AppHost
    Reflex.Host.App.PureHost
    Reflex.Host.App.HostActions
    Reflex.Host.App.Switching
    Reflex.Host.App.Util

  ghc-options: -Wall -O2 -threaded


test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
