name:          reflex-transformers
version:       0.1
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.10
author:        Oliver Batchelor
maintainer:    saulzar@gmail.com
stability:     experimental
homepage:      http://github.com/saulzar/reflex-transformers
bug-reports:   http://github.com/saulzar/reflex-transformers/issues
copyright:     Copyright (C) 2015 Oliver Batchelor
synopsis:      Collections and switchable Monad transformers for Reflex
description:   
  This library provides a set of Monad transformers (and instances for common transformers) on top of 
  widget switching primitives for reflex. For example ReaderT and WriterT which operate in the presence 
  of widget switching, allowing you to pass inputs and outputs up and down the UI tree.
  
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.md

source-repository head
  type: git
  location: https://github.com/saulzar/reflex-transformers.git

  
  
library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2 
  build-depends:
      base >= 4.4 && < 5
    , reducers >= 3.11
    , mtl
    , reflex >= 0.3
    , dlist
    , dependent-sum
    , transformers 
    , lens
    , semigroups
    , containers
  default-extensions:
    TupleSections
    RecursiveDo
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    FunctionalDependencies
    RecordWildCards
    TypeFamilies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    RankNTypes
    GADTs

    
  exposed-modules:
    Reflex.Monad
    Reflex.Monad.Class
    Reflex.Monad.ReflexM
    Reflex.Monad.Supply
    Reflex.Switching
    Reflex.Updated

 
  ghc-options: -Wall -O2 -threaded


test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
